fixed sub-background for more visibility

--- a/web/css/Contact_Us.css
+++ b/web/css/Contact_Us.css
@@ -13,7 +13,8 @@ body {
   padding: 0;
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
-  background: #FDFDFD;
+  /* background: #FDFDFD; */
+  background-color:  #fffdd0;
 }
 
 .container {
