--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,5 +1,4 @@
 body {
-background-color:  #fffdd0;
 text-align: center;
 font-family: 'Special Elite', cursive;
 
